// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieCard should match snapshot 1`] = `
<div
  className="movie-card-div"
>
  <Link
    replace={false}
    to="/movies/297802"
  >
    <img
      alt="movie poster"
      src="https://image.tmdb.org/t/p/w500/5Kg76ldv7VxeX9YlcQXiowHgdX6.jpg"
    />
  </Link>
  <button
    className="delete"
    onClick={[Function]}
  >
    DELETE
  </button>
</div>
`;

exports[`MovieCard should match snapshot if user has no favorites or if there is no user 1`] = `
<div
  className="movie-card-div"
>
  <Link
    replace={false}
    to="/movies/297802"
  >
    <img
      alt="movie poster"
      src="https://image.tmdb.org/t/p/w500/5Kg76ldv7VxeX9YlcQXiowHgdX6.jpg"
    />
  </Link>
  <Link
    replace={false}
    to="/login"
  >
    <button>
      FAVORITE
    </button>
  </Link>
</div>
`;

exports[`MovieCard should match the correct snapshot when there is a user without favorites 1`] = `
<div
  className="movie-card-div"
>
  <Link
    replace={false}
    to="/movies/297802"
  >
    <img
      alt="movie poster"
      src="https://image.tmdb.org/t/p/w500/5Kg76ldv7VxeX9YlcQXiowHgdX6.jpg"
    />
  </Link>
  <button
    className="favorite"
    onClick={[Function]}
  >
    FAVORITE
  </button>
</div>
`;
